--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.20.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.twilio.sdk</groupId>
